# wakala

./: .gitignore  BACKLOG.md  BUILD-PLAN.md  CHANGELOG.md  COORDINATION.md  Cargo.toml  DECISIONS.md  HANDOVER.md  LICENSE  README.md  ROADMAP.md  TASKS.md  THIRD-PARTY-NOTICES-GO.txt  fly.dev.toml  fly.toml  go.mod  go.sum  package.json
.github/workflows/: ci.yml  release.yml
brand/: README.md  make-icons.mjs
client/: README.md  THIRD-PARTY-NOTICES.txt  package-lock.json  package.json  vite.config.lib.js
client/src/: chunkProof.js  endpoints.js  fabric.js  index.js  prekeys.js  regionPop.js  relayBox.js  rendezvous.js  rendezvousSignaling.js  signaling.js
client/src/__tests__/: _relayTestUtil.js  chunkProof.test.js  endpoints.test.js  fabric.dos.test.js  fabric.meter.test.js  fabric.negotiation.test.js  fabric.reconnect.test.js  fabric.relay.test.js  fabric.security.test.js  ice.test.js  peer-auth.test.js  prekeys.test.js  regionPop.test.js  relay-confidentiality.test.js  relay-downgrade.test.js  relay-forward-secrecy.test.js  relayBox.test.js  rendezvousSignaling.test.js  signaling.test.js
client/src/call/: emitter.js  fabricSignaling.js  ice.js  rtc.js
cmd/relay/: main.go  obsadapter.go  peercli.go
cmd/vulos-relay-agent/: main.go  main_test.go
cmd/vulos-relayd/: main.go
console/: .env  README.md  index.html  package.json  pnpm-lock.yaml
console/scripts/: interact-smoke.mjs  review.mjs  screenshot.mjs  smoke.mjs
console/src/: App.svelte  app.css
console/src/lib/: api.ts  format.ts  router.svelte.ts  theme.svelte.ts  types.ts  visibility.ts
console/src/lib/components/: ConformanceStrip.svelte  Shell.svelte  StatCard.svelte  VisibilityBadge.svelte
console/src/routes/: Billing.svelte  Conformance.svelte  Descriptor.svelte  Keys.svelte  Overview.svelte  Tariff.svelte
crates/: README.md
crates/admin/: Cargo.toml
crates/admin/src/: auth.rs  billing.rs  config.rs  conformance.rs  descriptor.rs  error.rs  keys.rs  lib.rs  main.rs  policy.rs  quota.rs  tariff.rs
crates/admin/tests/: api.rs
crates/broker-billing-patala/: Cargo.toml
crates/broker-billing-patala/src/: lib.rs
crates/broker-billing/src/: lib.rs  meter.rs  prepaid.rs  pricing.rs  settlement.rs  sim.rs  subscription.rs
crates/broker-billing/tests/: e2e_prepaid.rs
crates/broker-conformance/src/: lib.rs
crates/broker-economics/src/: descriptor.rs  lib.rs
crates/gateway/: Cargo.toml
crates/gateway/fuzz/: Cargo.toml  README.md
crates/gateway/fuzz/fuzz_targets/: gateway_admission.rs  gateway_alias.rs
crates/gateway/src/: coordinator.rs
crates/gateway/tests/: conformance_gateway.rs  conformance_runtime.rs
crates/media-relay/: Cargo.toml
crates/media-relay/src/: external.rs  lib.rs  mock.rs  sfu.rs
crates/reachability-adapter/src/: auth.rs
crates/relay/src/: server.rs
crates/relay/tests/: circuit.rs
demo/: index.html
docs/: ARCHITECTURE.md  CONFIGURATION.md  GETTING-STARTED.md  METERING-BILLING.md  PINNING.md  PUBCACHE.md  RENDEZVOUS.md  SCREENSHOTS.md  SECURITY.md  TROUBLESHOOTING.md  TUNNEL-GUIDE.md  TUNNEL.md
docs/screenshots/: README.md
internal/obs/: obs.go
internal/peering/: buckettransport.go  buckettransport_test.go  doc.go  envelope.go  ingress.go  multitransport.go  peer.go  peering_test.go  peerstore.go  peerstore_test.go  replay.go  reputation.go  reputation_test.go  resolve.go  routing.go  s3bucket.go  s3bucket_test.go  sender.go  transport.go  wire.go
internal/queue/: doc.go  fsqueue.go  mem.go  queue.go  queue_test.go
internal/relay/: doc.go  ratelimit.go  repisolation.go  repisolation_test.go  router.go  streamsignal.go  streamsignal_test.go  submit.go  syncp2p.go  syncp2p_test.go  webhook.go  webhook_test.go
internal/reputation/: blocklist.go  blocklist_test.go  capped.go  doc.go  permissive.go  policy.go  policy_test.go  postmaster.go  postmaster_test.go
internal/sending/: dane.go  dane_anchor.go  dane_resolver.go  dane_resolver_test.go  dane_test.go  dane_validating.go  dane_validating_test.go  dkim.go  dkim_test.go  doc.go  mtasts.go  pipeline.go  pipeline_test.go  pool.go  pool_test.go  poolsender.go  rspamd.go  rspamd_test.go  sender.go  smtp.go  smtp_test.go  warmup.go  warmup_test.go
internal/suppression/: ingress.go  list.go  report.go  sqlitestore.go  suppression_test.go
scripts/: gen-third-party-notices.mjs  go-licenses.json.tpl  package.json  screenshots.mjs
security/: mtasts_test.go  suppression_test.go  trust_segment_test.go
spec/: PEERING.md  VERSIONS.md
tunnel/: concurrency_cost_test.go  demand_signal_e2e_test.go  drain_e2e_test.go  scaling_bench_test.go  shutdown_e2e_test.go  tunnel_test.go
tunnel/agent/: agent.go  conn.go  conn_leak_test.go  forward.go  insecure_warn_test.go  ssrf_adversarial_test.go  staggered_reconnect_test.go
tunnel/cost/: cost.go  cost_test.go
tunnel/direct/: direct.go  direct_test.go
tunnel/internal/keepalive/: keepalive_test.go
tunnel/internal/wire/: wire.go
tunnel/pubcache/: addr.go  cbor.go  merkle.go  pin.go  pin_test.go  pinapi.go  ratelimit.go  service.go  service_test.go  store.go  store_test.go  upstream.go  verify.go  verify_test.go
tunnel/rendezvous/: cors.go  cors_test.go  ice.go  keyaddr.go  presence.go  queue.go  ratelimit.go  replay.go  service.go  service_test.go
tunnel/server/: admission.go  admission_test.go  adversarial_agent_test.go  adversarial_test.go  auth.go  billing_test.go  control.go  cpclient.go  cpclient_escape_test.go  direct.go  direct_test.go  directprobe.go  directprobe_budget_test.go  directprobe_test.go  metering.go  metering_retry_test.go  metrics.go  proxy.go  proxy_ws.go  proxy_ws_test.go  ratelimit.go  ratelimit_test.go  registry.go  rendezvous_mount_test.go  requesttimeout_test.go  revocation.go  revocation_sweep_test.go  revocation_test.go  s2snotify.go  s2snotify_test.go  server.go  sfuhost.go  sfuhost_test.go  slowbody_test.go  splice.go
