# Ephor — the broker (coordinator) reference implementation of the KOTVA standard.
#
# This is a virtual workspace: one crate per coordinator *kind* plus the shared
# `broker-economics` crate (the content-visibility model, authz, tariff, usage
# receipts) and the `broker-conformance` harness (the CONTRACT COORD-1..8 checks).
#
# The Go reverse-tunnel relay + JS client SDK are preserved untouched alongside
# this (HANDOVER §Guardrails-3) until the Rust port is proven.
#
# Substrate types (MOTE, envelope, identity/naming, PUB, SYNC, signing/DS-tags,
# MLS glue, CBOR, crypto) come from `kotva-core`, a crate carved from envoir and
# pinned by tag — NEVER tracked at HEAD (the isango guardrail, HANDOVER §Guardrails-1).
# `kotva-core` is tag-pinned at `core-v0.2.0`; every crate that needs it (currently
# `broker-economics`, `gateway`) depends on that exact tag directly (see each crate's
# own Cargo.toml — not unified here via `[workspace.dependencies]`, so a future retag
# is a per-crate, reviewable bump rather than one silent workspace-wide jump).

[workspace]
resolver = "2"
members = [
    "crates/broker-economics",
    "crates/broker-billing",
    "crates/broker-billing-patala",
    "crates/broker-conformance",
    "crates/reachability-adapter",
    "crates/gateway",
    "crates/admin",
    "crates/relay",
    "crates/media-relay",
    "crates/indexer",
    "crates/labeler",
    "crates/matcher",
    "crates/arbiter",
    "crates/oracle",
    "crates/compute",
]

# `crates/broker-billing-patala` is a real workspace member (listed above) but is deliberately
# left OUT of `default-members`: it path-depends on the sibling `patala` repo
# (`../../../patala/{patala-core,patala-stellar}`), an OPTIONAL reference `SettlementRail` adapter
# for `broker-billing`'s provider-agnostic settlement seam — never a hard dependency of
# `broker-billing` or any coordinator kind. This mirrors exactly the trick envoir's
# `dmtap-postage-patala` (and patala's own workspace, for `patala-solana`/`patala-stellar`/
# `patala-hyperswitch`) already use: plain `cargo build`/`cargo test` at this workspace root never
# pulls patala in; only `cargo build -p broker-billing-patala` / `cargo test -p
# broker-billing-patala` does. `broker-billing` alone stays the default, patala-free settlement
# seam (see `crates/broker-billing/src/settlement.rs`).
default-members = [
    "crates/broker-economics",
    "crates/broker-billing",
    "crates/broker-conformance",
    "crates/reachability-adapter",
    "crates/gateway",
    "crates/admin",
    "crates/relay",
    "crates/media-relay",
    "crates/indexer",
    "crates/labeler",
    "crates/matcher",
    "crates/arbiter",
    "crates/oracle",
    "crates/compute",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vul-os/ephor"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

# Pinned once kotva-core is carved + tagged (HANDOVER §Guardrails-1):
# [workspace.dependencies]
# kotva-core = { git = "https://github.com/vul-os/kotva", tag = "core-vX.Y.Z" }
